# Swaynimated

./: Cargo.toml  LICENSE  README.md  shell.nix
example_glsl/: cloud.glsl
src/: main.rs  pipeline.rs  platform.rs
src/shaders/: frag.glsl  vert.glsl
winit/: .gitignore
winit/src/: lib.rs
winit/src/platform/: unix.rs
winit/src/platform_impl/linux/: mod.rs
winit/src/platform_impl/linux/wayland/: window.rs
