[package]
name = "swaynimated"
version = "0.1.0"
authors = ["Elyhaka <57923898+Elyhaka@users.noreply.github.com>"]
edition = "2018"

[dependencies]
winit = "0.20.0-alpha4"
image = "0.22.3"
glsl-to-spirv = "0.1.7"

[dependencies.wgpu]
version = "0.4.0"
features = [ "vulkan" ]

[dependencies.wayland-client]
version = "0.23.6"
features = [ "native_lib" ]

[dependencies.wayland-protocols]
version = "0.23.6"
features = [ "client", "unstable_protocols" ]
