[package]
name = "swaynimated"
version = "0.1.0"
authors = ["Elyhaka <57923898+Elyhaka@users.noreply.github.com>"]
edition = "2018"

[dependencies]
winit = { path = "./winit" }
image = "0.23.6"
glsl-to-spirv = "0.1.7"
wayland-sys = "0.23.6"
rayon = "1.2.1"
log = "0.4"
env_logger = "0.7.1"
structopt = { version = "0.3", default-features = false }
wgpu = { version = "0.4.0", features = [ "vulkan" ] }
wayland-client = { version = "0.23.6", features = [ "native_lib" ] }
wayland-protocols = { version = "0.23.6", features = [ "client", "unstable_protocols" ] }
natord = "1.0.9"
